[no.39] :bug: Fix ‘nav-menu’ stretch vertically on mobile

--- a/39-admin-space-control/src/scss/style.scss
+++ b/39-admin-space-control/src/scss/style.scss
@@ -49,7 +49,8 @@ a:active {
     width: 250px;
     transition: left 0.3s;
 
-    &.nav-is-active {
+    &.nav-is-open {
+        position: fixed;
         left: 0;
     }
 }
@@ -61,7 +62,7 @@ a:active {
     width: 40px;
     height: 40px;
 
-    .nav-is-active & {
+    .nav-is-open & {
         background-color: darken($background-color, 10%);
     }
 }
@@ -77,7 +78,7 @@ a:active {
     background-repeat: no-repeat;
     overflow: hidden;
 
-    .nav-is-active & {
+    .nav-is-open & {
         background-position: bottom left;
     }
 }
@@ -143,12 +144,29 @@ a:active {
     display: block;
     font-size: 2.5em;
     font-weight: $weight-700;
-    line-height: 1.3;
+    line-height: 1.5;
+
+    @include media('above-mobile') {
+        font-size: 3.5em;
+    }
+
+    @include media('above-tablet') {
+        font-size: 2.5em;
+    }
+
+    @include media('above-desktop') {
+        font-size: 3.5em;
+    }
 }
 
 .farthest__name {
     display: block;
     font-size: 0.875em;
+    line-height: 1.2;
+
+    @include media('above-mobile') {
+        font-size: 1em;
+    }
 }
 
 // Probe distances
